target/surefire-reports/conduitApp.conduitTest.txt
-------------------------------------------------------------------------------
Test set: conduitApp.conduitTest
-------------------------------------------------------------------------------
Tests run: 3, Failures: 3, Errors: 0, Skipped: 0, Time elapsed: 8.419 s <<< FAILURE! - in conduitApp.conduitTest
conduitApp/feature/Articles.[1:14] New Articles  Time elapsed: 2.303 s  <<< FAILURE!
org.opentest4j.AssertionFailedError: 
status code was: 422, expected: 201, response time in milliseconds: 361, url: https://conduit-api.bondaracademy.com/api/articles, response: 
{"errors":{"title":["must be unique"]}}
classpath:conduitApp/feature/Articles.feature:22
	at com.intuit.karate.junit5.FeatureNode.lambda$next$1(FeatureNode.java:86)
	at java.base/java.util.stream.ForEachOps$ForEachOp$OfRef.accept(ForEachOps.java:183)
	at java.base/java.util.stream.ReferencePipeline$3$1.accept(ReferencePipeline.java:197)
	at java.base/java.util.stream.ReferencePipeline$2$1.accept(ReferencePipeline.java:179)
	at java.base/java.util.stream.ReferencePipeline$3$1.accept(ReferencePipeline.java:197)
	at java.base/java.util.Iterator.forEachRemaining(Iterator.java:133)
	at java.base/java.util.Spliterators$IteratorSpliterator.forEachRemaining(Spliterators.java:1845)
	at java.base/java.util.stream.AbstractPipeline.copyInto(AbstractPipeline.java:509)
	at java.base/java.util.stream.AbstractPipeline.wrapAndCopyInto(AbstractPipeline.java:499)
	at java.base/java.util.stream.ForEachOps$ForEachOp.evaluateSequential(ForEachOps.java:150)
	at java.base/java.util.stream.ForEachOps$ForEachOp$OfRef.evaluateSequential(ForEachOps.java:173)
	at java.base/java.util.stream.AbstractPipeline.evaluate(AbstractPipeline.java:234)
	at java.base/java.util.stream.ReferencePipeline.forEachOrdered(ReferencePipeline.java:601)
	at java.base/java.util.Optional.ifPresent(Optional.java:178)
	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)

conduitApp/feature/Articles.[2:25] Create, Get and Delete Article  Time elapsed: 1.607 s  <<< FAILURE!
org.opentest4j.AssertionFailedError: 
js failed:
>>>>
01: ['articles', articleId  // Correctly formatted path for deletion]
<<<<
org.graalvm.polyglot.PolyglotException: SyntaxError: Unnamed:1:65 Expected comma but found eof
['articles', articleId  // Correctly formatted path for deletion]
                                                                 ^

- org.graalvm.polyglot.Context.eval(Context.java:428)
- com.intuit.karate.graal.JsEngine.evalForValue(JsEngine.java:169)
- com.intuit.karate.graal.JsEngine.eval(JsEngine.java:165)
- com.intuit.karate.core.ScenarioEngine.evalJs(ScenarioEngine.java:1252)
- com.intuit.karate.core.ScenarioEngine.path(ScenarioEngine.java:372)
- com.intuit.karate.ScenarioActions.path(ScenarioActions.java:80)
- java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)

classpath:conduitApp/feature/Articles.feature:52
	at com.intuit.karate.junit5.FeatureNode.lambda$next$1(FeatureNode.java:86)
	at java.base/java.util.stream.ForEachOps$ForEachOp$OfRef.accept(ForEachOps.java:183)
	at java.base/java.util.stream.ReferencePipeline$3$1.accept(ReferencePipeline.java:197)
	at java.base/java.util.stream.ReferencePipeline$2$1.accept(ReferencePipeline.java:179)
	at java.base/java.util.stream.ReferencePipeline$3$1.accept(ReferencePipeline.java:197)
	at java.base/java.util.Iterator.forEachRemaining(Iterator.java:133)
	at java.base/java.util.Spliterators$IteratorSpliterator.forEachRemaining(Spliterators.java:1845)
	at java.base/java.util.stream.AbstractPipeline.copyInto(AbstractPipeline.java:509)
	at java.base/java.util.stream.AbstractPipeline.wrapAndCopyInto(AbstractPipeline.java:499)
	at java.base/java.util.stream.ForEachOps$ForEachOp.evaluateSequential(ForEachOps.java:150)
	at java.base/java.util.stream.ForEachOps$ForEachOp$OfRef.evaluateSequential(ForEachOps.java:173)
	at java.base/java.util.stream.AbstractPipeline.evaluate(AbstractPipeline.java:234)
	at java.base/java.util.stream.ReferencePipeline.forEachOrdered(ReferencePipeline.java:601)
	at java.base/java.util.Optional.ifPresent(Optional.java:178)
	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)

conduitApp.conduitTest.testParallel  Time elapsed: 2.42 s  <<< FAILURE!
org.opentest4j.AssertionFailedError: 
status code was: 422, expected: 201, response time in milliseconds: 349, url: https://conduit-api.bondaracademy.com/api/articles, response: 
{"errors":{"title":["must be unique"]}}
classpath:conduitApp/feature/Articles.feature:22
js failed:
>>>>
01: ['articles', articleId  // Correctly formatted path for deletion]
<<<<
org.graalvm.polyglot.PolyglotException: SyntaxError: Unnamed:1:65 Expected comma but found eof
['articles', articleId  // Correctly formatted path for deletion]
                                                                 ^

- org.graalvm.polyglot.Context.eval(Context.java:428)
- com.intuit.karate.graal.JsEngine.evalForValue(JsEngine.java:169)
- com.intuit.karate.graal.JsEngine.eval(JsEngine.java:165)
- com.intuit.karate.core.ScenarioEngine.evalJs(ScenarioEngine.java:1252)
- com.intuit.karate.core.ScenarioEngine.path(ScenarioEngine.java:372)
- com.intuit.karate.ScenarioActions.path(ScenarioActions.java:80)
- java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)

classpath:conduitApp/feature/Articles.feature:52 ==> expected: <0> but was: <2>
	at org.junit.jupiter.api.AssertionFailureBuilder.build(AssertionFailureBuilder.java:151)
	at org.junit.jupiter.api.AssertionFailureBuilder.buildAndThrow(AssertionFailureBuilder.java:132)
	at org.junit.jupiter.api.AssertEquals.failNotEqual(AssertEquals.java:197)
	at org.junit.jupiter.api.AssertEquals.assertEquals(AssertEquals.java:150)
	at org.junit.jupiter.api.Assertions.assertEquals(Assertions.java:563)
	at conduitApp.conduitTest.testParallel(conduitTest.java:17)
	at java.base/java.lang.reflect.Method.invoke(Method.java:568)
	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)

